# fwutil

./: .gitignore  README.md  pyproject.toml  requirements.txt
fwutil/analysis/: __init__.py  data_analysis_interface.py  requirements.txt  sandbox.ipynb
fwutil/analysis/cycle_time/: __init__.py  cycle_time_distribution_by_category.py
fwutil/azure_interface/: __init__.py  azure_blob_storage_manager.py  blob_data_loader.py  requirements.txt
fwutil/examples/: README.md
fwutil/pipelines/base/: __init__.py  etl_strategy.py
fwutil/pipelines/common/: __init__.py  azure_blob_strategies.py  date_table_strategy.py
fwutil/pipelines/common/excel_strategies/: __init__.py  xlsx_extract_strategies.py
fwutil/pipelines/gitlab/: __init__.py  gitlab_pipelines.py  requirements.txt
fwutil/pipelines/gitlab/strategies/: __init__.py  gitlab_issue_strategies.py
fwutil/utils/: __init__.py  dataframe_transformer.py  logger.py
