[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fwutil"
authors = [
    {name = "Josh Phillips", email = "josh.phillips@fearnworks.com"},
]

readme = "README.md"
python_requires = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires = ['python-dotenv==1.0.0', 'requests==2.28.2', 'urllib3==1.26.12', 'numpy', 'pandas==2.0.1', 'pyarrow==11.0.0', 'matplotlib', 'sqlalchemy', 'xlsxwriter', 'openpyxl']
version = "0.0.1"
description = "A collection of utility functions for Fearnworks projects."

[project.urls]
Source = "https://gitlab.com/fearnworks/fearnworks-util"
